# CG_Flex

./: .gitignore  Demo_configuration.md  Demo_usage.md  README.md  pyproject.toml
Documentation/: Controllermodule_extensions.rst  Demo_script_test_v2_ pickle_method.rst  Graphmodule.rst  Graphmodule_extensions.rst  Samplingmodule_extensions.rst  Uml_documentation.rst  blueprint_main_controller.rst  cgflex_project.Main_Controller.rst  cgflex_project.Module_Dependencymaker.rst  cgflex_project.Module_Graphmaker.rst  cgflex_project.Module_Sampler.rst  cgflex_project.Shared_Classes.rst  cgflex_project.rst  conf.py  demo_configuration.rst  index.rst  sampling_tsd.rst  sinkmaker.rst  verticemaker.rst
cgflex_project/Main_Controller/: Controllermodule.py  Controllermodule_extensions.py
cgflex_project/Module_Dependencymaker/: Dependencymodule.py  _dependencymaker.py  _dependencymaker_initial_value_distributions.py  _dependencymaker_tsd_functions.py  _errortermmaker.py  _errortermmaker_collection.py  _errortermmaker_complex_distributions.py  _functionmaker.py  _functionmaker_extreme_values.py  _functionmaker_gaussian_process_models.py  _inputloader.py  _kernel_collection.py  _kernelcombinator.py  sampling_tsd.py
cgflex_project/Module_Graphmaker/: Graphmodule.py  Graphmodule_extensions.py  layermaker.py  nodemaker.py  sinkmaker.py  sourcemaker.py  verticemaker.py
cgflex_project/Module_Sampler/: Samplingmodule.py  (+1 more)
scripts/: comparisons_with_standard_and_real_graphs.py  config_objects.py  usage_ready_script.py  usage_ready_script_simple.py  usage_ready_script_various_tests.py
(+119 files in other folders)
